contrast corrected

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -169,8 +169,8 @@ section {
 #company3-list,
 #company5-list,
 #company7-list {
-    background-color: #5d5d81a2;
-    color: white;
+    background-color: #5d5d815d;
+    color: black;
     text-align: left;
     padding-top: 5px;
 }
